# git-cm

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/git_cm/: __init__.py  cli.py  config.py  git_utils.py  llm.py  prompt.py  style.py  version.py
tests/: conftest.py  test_cli.py  test_config.py  test_git_utils.py  test_llm.py  test_prompt.py  test_style.py
